fix styleing overlap bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+main {
+  margin-top: 100px;
+}
 
 form button {
   width: 100px;
