--- a/src/pages/ExperienceList/ExperienceList.module.css
+++ b/src/pages/ExperienceList/ExperienceList.module.css
@@ -1,8 +1,6 @@
 .experienceListContainer {
-  margin-top: 100px;
   display: flex;
   flex-wrap: wrap;
   background-color: lightgray;
-  /* justify-content: center; */
   align-items: center;
 }
